tests/agl/rejections/parse/dict_bad_key_type.agl
let m: dict[int, text] = {}
